# cpp-toybox

./: .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: analysis.yml  perform.yml  pr.yml
CMake/: Compiler.cmake  Coverage.cmake  MemCheck.cmake  gcovr.cfg.in  valgrind_wrapper.sh
analysis/: analysis.sarif
ind/: CMakeLists.txt  CMakePresets.json
ind/googletest/: CMakeLists.txt  test.cc
src/: CMakeLists.txt
src/InstructionInfo/: CMakeLists.txt  InstructionInfo.cc  main.cc
src/aligned_sum/: CMakeLists.txt  main.cc
src/alloc_initializer/: CMakeLists.txt  main.cc
src/args/: CMakeLists.txt  main.cc
src/argstorage/: CMakeLists.txt  argstorage.cpp
src/argument_parser/: CMakeLists.txt  argument_parser.cc  argument_parser.h  main.cc
src/argument_parser/test/: CMakeLists.txt  argument_parser_test.cc
src/binning/: CMakeLists.txt  binning.h  binning_impl_avx512.cc  binning_impl_avx512seq.cc  binning_impl_avx512seqbuffer.cc  binning_impl_avx512unroll.cc  binning_impl_avx512unrollall.cc  binning_impl_avx512unrollload.cc  binning_impl_avx512unrollx.cc  binning_impl_avx515seq.cc  binning_impl_avx515seqbuffer.cc  binning_impl_avx515unrollx.cc  binning_impl_naive.cc  binning_impl_seqread.cc  binning_main.cc  main.cc
src/binning/test/: CMakeLists.txt  binning_test.cc
src/branch_miss/: CMakeLists.txt  main.cc
src/card/: CMakeLists.txt  Card.cpp  Card.h  CardGame.cpp  CardGame.h  Concentration.h  ConcentrationField.cpp  ConcentrationField.h  Config.cpp  Config.h  Config.toml  Corcentration.cpp  Deck.cpp  Deck.h  Main.cpp
src/console_input/: CMakeLists.txt  console_input.cc  console_input.h  main.cc
src/conv/: CMakeLists.txt  main.cc
src/copy_make_border/: CMakeLists.txt  main.cc
src/enum_utils/: CMakeLists.txt  copilot.cc  dynamic_enum.cc  enum_utils.cc  enum_utils.h  main.cc  static_enum.cc
src/enum_utils/test/: CMakeLists.txt  enum_utils_test.cc
src/fib/: CMakeLists.txt  main.cc
src/hadd/: CMakeLists.txt  hadd.cc
src/hadd_multi/: CMakeLists.txt  hadd_multi.cc
src/histo/: CMakeLists.txt  histo.cc  histo.h  histo_impl_naive.cc  histo_impl_naive.s  histo_main.cc
src/instruction_info/: CMakeLists.txt  instruction_info.cc  instruction_info.h  main.cc
src/inter_branch/: CMakeLists.txt  inter_branch.cc  inter_branch.h  main.cc
src/lut/: CMakeLists.txt  lut.cc  lut.h  lut_impl_avx2.cc  lut_impl_avx512f.cc  lut_impl_avx512vbmi.cc  lut_impl_naive.cc  main.cc
src/magic_enum_call/: CMakeLists.txt  main.cc
src/multi_frame_access/: CMakeLists.txt  main.cc  multi_frame_access.cc  multi_frame_access.h
src/scoped_handle/: CMakeLists.txt  dummy_handle.cc  dummy_handle.h  dummy_handle2.cc  dummy_handle2.h  main.cc  scoped_handle.h  strong_typedef.h
src/shared_proj/: CMakeLists.txt
src/shared_proj/lib_main/: CMakeLists.txt  main.cc
src/shared_proj/lib_main2/: CMakeLists.txt
src/shared_proj/lib_shared/: CMakeLists.txt  lib_shared.cpp
src/stack_hist/: CMakeLists.txt  main.cc
src/stdio/: CMakeLists.txt  stdio.cc  writer.cc
src/unpack/: CMakeLists.txt  main.cc
src/usb/: 60-razor-naga.rules  CMakeLists.txt  main.cc
src/vadd/: CMakeLists.txt  vadd.cc
src/valgrind/: CMakeLists.txt  main.cc  valgrind.cc  valgrind.h
src/valgrind/test/: CMakeLists.txt  valgrind_test.cc
src/vhadd/: CMakeLists.txt  main.cc  vhadd.cc  vhadd.h  vhadd_impl_avx2.cc  vhadd_impl_avx512.cc  vhadd_impl_naive.cc
src/vhadd/test/: CMakeLists.txt  test_vhadd_multiparam.cc  test_vhadd_overflow.cc
test/: CMakeLists.txt
test/enum_operator/: CMakeLists.txt  test_enum_operator.cc
test/test_vhadd/: CMakeLists.txt  misc.h  test_vhadd_avx2.cc  test_vhadd_multiparam.cc  test_vhadd_naive.cc  test_vhadd_overflow.cc
