if(NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64")
endif()
add_subdirectory(unpack)
add_subdirectory(args)
add_subdirectory(branch_miss)
add_subdirectory(inter_branch)
add_subdirectory(stack_hist)
# add_subdirectory(binning)
add_subdirectory(enum_utils)
add_subdirectory(shared_proj)

# if(NOT WIN32)
#   add_subdirectory(usb)
# endif()
# add_subdirectory(stdio)
